--- a/style.css
+++ b/style.css
@@ -5,6 +5,28 @@ html {
     font-size: 20px;
     font-weight: 200;
   }
-span.lines {
-    color: red;
+
+h1, h5 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+h3 {
+    justify-content: center;
+    align-items: center;
+
+}
+
+span.lines {
+    background: white;
+    list-style: none;
+    border-bottom: 1px solid #D8D8D8;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
+    margin: 0;
+    padding: 20px;
+    transition: background 0.2s;
+    display: flex;
+    justify-content: space-between;
+    text-transform: capitalize;
+  }
