--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     box-sizing: border-box;
-    background: #ffc600;
+    background: #FEFCFD;
     font-family: 'helvetica neue';
     font-size: 20px;
     font-weight: 200;
@@ -30,3 +30,26 @@ span.lines {
     justify-content: space-between;
     text-transform: capitalize;
   }
+  p:nth-child(1) { 
+    background-color:rgb(178, 99, 0) }
+  p:nth-child(2) { 
+    background-color:rgb(220, 36, 31)  }
+  p:nth-child(3) { 
+    background-color:rgb(255, 211, 41)  }
+  p:nth-child(4) { 
+    background-color:rgb(0, 125, 50)  }
+  p:nth-child(5) { 
+    background-color:rgb(244, 169, 190)  }
+  p:nth-child(6) { 
+    background-color:rgb(161, 165, 167)  }
+  p:nth-child(7) { 
+    background-color:rgb(155, 0, 88)  }
+  p:nth-child(8) { 
+    background-color:rgb(0, 0, 0)  }
+  p:nth-child(9) { 
+    background-color:rgb(0, 25, 168)  }
+  p:nth-child(10) { 
+    background-color:rgb(0, 152, 216)  }
+  p:nth-child(11) { 
+    background-color:rgb(147, 206, 186)  }
+  
