--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ h3 {
     align-items: center;
 
 }
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    color: black;
+    border: 2px solid gray; 
+      
+
+}
 
 span.lines {
     background: white;
@@ -25,7 +35,6 @@ span.lines {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
     margin: 0;
     padding: 20px;
-    transition: background 0.2s;
     display: flex;
     justify-content: space-between;
     text-transform: capitalize;
