--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ html {
     font-size: 20px;
     font-weight: 200;
   }
-
+.intro {
+  background-color: green;
+}
 h1, h5 {
     display: flex;
     justify-content: center;
@@ -30,26 +32,40 @@ span.lines {
     justify-content: space-between;
     text-transform: capitalize;
   }
-  p:nth-child(1) { 
+  .container {
+    position: relative;
+    margin:20px;
+    float:left;
+    Left:30%;
+    top:100px;
+    transition: .5s;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height:200px;
+    border-radius:10px;
+    box-shadow: 0px 2px 2px 2px rgba(O, O, O.5);
+
+  }
+  .container:nth-child(1) { 
     background-color:rgb(178, 99, 0) }
-  p:nth-child(2) { 
+  .container:nth-child(2) { 
     background-color:rgb(220, 36, 31)  }
-  p:nth-child(3) { 
+  .container:nth-child(3) { 
     background-color:rgb(255, 211, 41)  }
-  p:nth-child(4) { 
+  .container:nth-child(4) { 
     background-color:rgb(0, 125, 50)  }
-  p:nth-child(5) { 
+  .container:nth-child(5) { 
     background-color:rgb(244, 169, 190)  }
-  p:nth-child(6) { 
+  .container:nth-child(6) { 
     background-color:rgb(161, 165, 167)  }
-  p:nth-child(7) { 
+  .container:nth-child(7) { 
     background-color:rgb(155, 0, 88)  }
-  p:nth-child(8) { 
+  .container:nth-child(8) { 
     background-color:rgb(0, 0, 0)  }
-  p:nth-child(9) { 
+  .container:nth-child(9) { 
     background-color:rgb(0, 25, 168)  }
-  p:nth-child(10) { 
+  .container:nth-child(10) { 
     background-color:rgb(0, 152, 216)  }
-  p:nth-child(11) { 
+  .container:nth-child(11) { 
     background-color:rgb(147, 206, 186)  }
   
